<resources>
    <string name="app_name">LayoutProject</string>
    <string name="e_and_e">efficiently and effectively</string>
    <string name="Home">Learn at home!</string>
    <string name="start">Let\'s Start!</string>
    <string name="start_now">Start Now</string>
    <string name="per_year">per year</string>
    <string name="Sign">Sign Up</string>
    <string name="Account" translatable="false">Don\'t you have an account?</string>
    <string name="per_month">per month</string>
    <string name="_11_99">$11.99</string>
    <string name="gets">Get unlimited access!</string>
    <string name="_143_99">$143.99</string>
    <string name="monthly">Monthly</string>
    <string name="go">Go Premium</string>
    <string name="_4_99">$4.99</string>
    <string name="yearly">Yearly</string>
</resources>