<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PremiumActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="248dp"
            android:layout_height="246dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="33dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vct3" />

        <TextView
            android:id="@+id/textView2"
            style="@style/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="18dp"
            android:text="@string/gets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/leftCard"
            style="@style/card"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/premiumTitle1"
                style="@style/subMainBoldTitle"
                android:text="@string/_11_99" />

            <TextView
                android:id="@+id/premiumTitle7"
                style="@style/subBoldTitle1"
                android:text="@string/_11_99" />

            <TextView
                android:id="@+id/premiumTitle8"
                style="@style/subLightTitle1"
                android:layout_marginLeft="70dp"
                android:text="@string/per_month" />

            <TextView
                android:id="@+id/premiumTitle9"
                style="@style/subBoldTitle2"
                android:text="@string/_143_99" />

            <TextView
                android:id="@+id/premiumTitle10"
                style="@style/subLightTitle2"
                android:layout_marginLeft="78dp"
                android:text="@string/per_year" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/monthlyText"
            style="@style/colorful_sub_Title"
            android:backgroundTint="#ADDEE6"
            android:text="@string/monthly"
            app:layout_constraintBottom_toTopOf="@+id/leftCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/leftCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rightCard"
            style="@style/card"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/premiumTitle2"
                style="@style/subMainBoldTitle"
                android:text="@string/_4_99" />

            <TextView
                android:id="@+id/premiumTitle3"
                style="@style/subBoldTitle1"
                android:text="@string/_4_99" />

            <TextView
                android:id="@+id/premiumTitle4"
                style="@style/subLightTitle1"
                android:layout_marginLeft="63dp"
                android:text="@string/per_month" />

            <TextView
                android:id="@+id/premiumTitle5"
                style="@style/subBoldTitle2"
                android:text="$59.99" />


            <TextView
                android:id="@+id/premiumTitle6"
                style="@style/subLightTitle2"
                android:layout_marginLeft="70dp"
                android:text="@string/per_year" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/yearlyText"
            style="@style/colorful_sub_Title"
            android:backgroundTint="#F6ADB6"
            android:text="@string/yearly"
            app:layout_constraintBottom_toTopOf="@+id/rightCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rightCard" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/PreButton"
            android:layout_height="@dimen/button_height"
            style="@style/main_button"
            android:layout_width="210dp"
            android:layout_marginBottom="24dp"
            android:text="@string/go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>