<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="331dp"
        android:layout_height="344dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_image" />
    <TextView
        android:id="@+id/HomeText"
        android:layout_marginTop="74dp"
        android:text="@string/Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        style="@style/mainTitle" />
    <TextView
        android:id="@+id/efficientlyText"
        android:layout_marginTop="11dp"
        android:text="@string/e_and_e"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeText"
        style="@style/LightTitle" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNowButton"
        android:layout_height="@dimen/button_height"
        style="@style/main_button"
        android:layout_width="200dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/efficientlyText" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>